--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "babel src --out-dir dist --source-maps",
     "start": "node -r babel-register src",
+    "preversion": "babel src --out-dir dist --source-maps",
     "dev": "nodemon -r babel-register --inspect=9308 --expose-http2 src",
     "precommit": "standard",
     "commitmsg": "validate-commit-msg"
