--- a/package.json
+++ b/package.json
@@ -2,17 +2,11 @@
   "name": "http2-proxy",
   "version": "0.1.2",
   "scripts": {
-    "build": "babel src --out-dir dist --source-maps",
-    "start": "node -r babel-register src",
-    "preversion": "babel src --out-dir dist --source-maps",
-    "dev": "nodemon -r babel-register --inspect=9308 --expose-http2 src",
+    "dev": "nodemon --inspect=9308 --expose-http2 src",
     "precommit": "standard",
     "commitmsg": "validate-commit-msg"
   },
-  "standard": {
-    "parser": "babel-eslint"
-  },
-  "main": "./dist/index.js",
+  "main": "index.js",
   "author": "Robert Nagy <robert.nagy@boffins.se>",
   "license": "MIT",
   "repository": "nxtedition/node-http2-proxy",
@@ -26,12 +20,6 @@
     "pump": "^1.0.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-function-bind": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "husky": "^0.14.3",
     "nodemon": "^1.12.0",
     "standard": "^10.0.3",
