--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "proxy"
   ],
   "dependencies": {
-    "http-errors": "^1.6.2",
-    "pump": "^1.0.2"
+    "http-errors": "^1.6.2"
   },
   "devDependencies": {
     "husky": "^0.14.3",
