--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "http",
     "proxy"
   ],
-  "dependencies": {
-    "http-errors": "^1.6.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "husky": "^0.14.3",
     "nodemon": "^1.12.0",
