--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "http",
     "proxy"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "reusify": "^1.0.2"
+  },
   "devDependencies": {
     "husky": "^0.14.3",
     "nodemon": "^1.12.0",
