--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http2-proxy",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "nodemon --inspect=9308 --expose-http2 src",
     "precommit": "standard",
