--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "husky": "^0.14.3",
     "nodemon": "^1.12.0",
     "standard": "^10.0.3",
-    "validate-commit-msg": "^2.14.0",
-    "async": "^2.5.0",
-    "ws": "^3.1.0"
+    "validate-commit-msg": "^2.14.0"
   }
 }
