--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "http2-proxy",
   "version": "1.2.11",
   "scripts": {
-    "dev": "nodemon --inspect=9308 --expose-http2 src",
+    "dev": "nodemon --inspect=9308 src",
     "precommit": "standard",
     "commitmsg": "validate-commit-msg"
   },
@@ -17,7 +17,7 @@
   ],
   "devDependencies": {
     "husky": "^0.14.3",
-    "nodemon": "^1.12.0",
+    "nodemon": "^1.12.1",
     "standard": "^10.0.3",
     "validate-commit-msg": "^2.14.0"
   }
