fix: move eslint plugin to dev deps

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.2.2",
     "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.16.0",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -52,8 +53,5 @@
       "commit-msg": "validate-commit-msg",
       "pre-commit": "files=`git diff --cached --diff-filter=d --name-only | grep '\\.js$' || true` && ( [ -z \"$files\" ] || eslint --format=unix $files ) && yarn test"
     }
-  },
-  "dependencies": {
-    "eslint-plugin-import": "^2.18.2"
   }
 }
